--- a/Proyecto/Proyecto.csproj
+++ b/Proyecto/Proyecto.csproj
@@ -174,6 +174,7 @@
     <Content Include="Formularios\frmPaginaPrincipal.aspx" />
     <Content Include="Formularios\frmRegistrarEventos.aspx" />
     <Content Include="Formularios\frmSalir.aspx" />
+    <Content Include="Formularios\frmTablaGoleadores.aspx" />
     <Content Include="Formularios\frmTablaPosiciones.aspx" />
     <Content Include="Formularios\frmTerminaTorneo.aspx" />
     <Content Include="Global.asax" />
@@ -193,6 +194,17 @@
     </EntityDeploy>
     <Content Include="Modelos\ProyectoBD.edmx.diagram">
       <DependentUpon>ProyectoBD.edmx</DependentUpon>
+    </Content>
+    <Content Include="progra5DataSet1.xsc">
+      <DependentUpon>progra5DataSet1.xsd</DependentUpon>
+    </Content>
+    <None Include="progra5DataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>progra5DataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <Content Include="progra5DataSet1.xss">
+      <DependentUpon>progra5DataSet1.xsd</DependentUpon>
     </Content>
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Modelos\ProyectoBD.Context.tt">
@@ -529,6 +541,13 @@
     <Compile Include="Formularios\frmSalir.aspx.designer.cs">
       <DependentUpon>frmSalir.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Formularios\frmTablaGoleadores.aspx.cs">
+      <DependentUpon>frmTablaGoleadores.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Formularios\frmTablaGoleadores.aspx.designer.cs">
+      <DependentUpon>frmTablaGoleadores.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Formularios\frmTablaPosiciones.aspx.cs">
       <DependentUpon>frmTablaPosiciones.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -613,6 +632,9 @@
     <Compile Include="Modelos\pa_RetornaPosiciones_Result.cs">
       <DependentUpon>ProyectoBD.tt</DependentUpon>
     </Compile>
+    <Compile Include="Modelos\pa_retorna_goleadores_Result.cs">
+      <DependentUpon>ProyectoBD.tt</DependentUpon>
+    </Compile>
     <Compile Include="Modelos\Persona.cs">
       <DependentUpon>ProyectoBD.tt</DependentUpon>
     </Compile>
@@ -669,6 +691,11 @@
     </Compile>
     <Compile Include="Modelos\Usuario.cs">
       <DependentUpon>ProyectoBD.tt</DependentUpon>
+    </Compile>
+    <Compile Include="progra5DataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>progra5DataSet1.xsd</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
